--- a/planit/main/templates/main/home.html
+++ b/planit/main/templates/main/home.html
@@ -145,7 +145,7 @@
           <h3>홈 화면</h3>
         </div>
       </a>
-      <a href="#" style="text-decoration: none; color: inherit;">
+      <a href="{% url "main:report" %}" style="text-decoration: none; color: inherit;">
         <div class="title-row">
           <img src="{% static 'main/search_icon.png' %}" alt="찾기 아이콘" class="icon">
           <h3>내 소비 분석</h3>
