--- a/planit/main/templates/main/setting.html
+++ b/planit/main/templates/main/setting.html
@@ -185,13 +185,12 @@
         <button type="submit" class="card-button" style="border-bottom: 1px solid #eee;">
           내 소비 데이터 다운로드
         </button>
-      </form>
-        <form action="{% url 'main:delete' %}" method="POST" onsubmit="return confirm('정말로 계정을 삭제하시겠습니까?');" style="margin: 0;">
-        {% csrf_token %}
-        <button type="submit" class="card-button">
-          계정 탈퇴
-        </button>
         </form>
+
+        <form action="{% url 'main:delete_confirm' %}" method="get" style="margin: 0;">
+        <button type="submit" class="card-button">계정 탈퇴</button>
+        </form>
+
       </div>
 
       <div class="card-section">
